--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,6 @@
     </head>
     <body>
         <h1>Assignment 5: Visualization</h1>
-        <p>Twitter mentions vs. Steam Sales</p>
-        <p>awemaoe, awemaoe</p>
-        <p>Test change!!!</p>
+        <p>Reddit comments vs. Volume 24 hours</p>
     </body>
 </html>
